# tetrust-server

./: .env.sample  Cargo.toml  README.md
restclient/: app.http  auth.http  room.http  user.http
src/: main.rs
src/extensions/: current_user.rs  game_state.rs  mod.rs  mongo.rs
src/middlewares/: auth.rs
src/models/: mod.rs  room.rs  room_member.rs  room_number.rs  user.rs
src/routes/: app.rs  mod.rs  websocket.rs
src/routes/app/: handler.rs
src/routes/app/dto/: health_response.rs
src/routes/auth/: handler.rs  service.rs
src/routes/auth/dto/: login_request.rs  login_response.rs
src/routes/room/: handler.rs  mod.rs  service.rs
src/routes/room/dto/: create_room_request.rs  create_room_response.rs  enter_room_request.rs  enter_room_response.rs  game_websocket_open_query.rs  game_websocket_transfer.rs  mod.rs  start_room_request.rs  start_room_response.rs  trasfer_board.rs  trasfer_garbage.rs
src/routes/user/: handler.rs  service.rs
src/routes/user/dto/: mod.rs  signup_request.rs  signup_response.rs
src/routes/websocket/: handler.rs  mod.rs
src/routes/websocket/dto/: mod.rs  take_my_board.rs
src/types/: mod.rs  point.rs
src/types/blocks/: colors.rs  shapes.rs
src/types/board/: board.rs  cell.rs
src/utils/: hash.rs  jwt.rs  mod.rs  uuid_tool.rs
