[package]
name = "tetrust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
serde_json = "1.0.48"
serde = { version="1.0.105", features=["derive"] }
dotenv = "0.15.0"
uuid = {version = "1.2.2", features=["v4", "fast-rng", "macro-diagnostics"] }
sha256 = "1.1.1"
